[project]
name = "redditsearch"
version = "0.1.0"
description = "Reddit search tool for customer development - find pain points and market opportunities"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.5.0",           # Settings validation
    "pydantic-settings>=2.1.0",  # Settings from env vars
    "python-dotenv>=1.0.0",      # Load .env files
    "click>=8.1.0",              # CLI framework
    "rich>=13.7.0",              # Pretty terminal output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",             # Testing framework
    "pytest-cov>=4.1.0",         # Code coverage
    "pytest-mock>=3.12.0",       # Mocking support
    "black>=23.12.0",            # Code formatter
    "ruff>=0.1.0",               # Fast linter
]
